<resources>
    <string name="app_name">StewardBoard</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="generic_input_field_hint">Entrer la valeur</string>
    <string name="specific_input_field_hint">Quel vaut %s?</string>
    <string name="invoice_output">%1$s a coûté %2$s€</string>
    <string name="generic_input_adding">Ajouter une entrée dans la liste</string>
    <string name="keying_expenses_table_hint">Select the expense type</string>
    <string name="keying_expense_input_hint">Entrer the cost</string>
    <string name="keying_expense_actual_currency">Currency</string>
    <string name="keying_expense_miscellaneous_hint">Details about the expense</string>
    <string name="keying_expense_occurred_date">Made on %1$s</string>
    <string name="keying_expense_save">Save</string>
    <string name="keying_successfully_completed">Keying was successfully completed</string>
    <string name="checkup_expenses_central_budget">Forecast Expenses Budget: %s %.3f</string>
    <string name="checkup_expenses_table_balance">Leftovers after used : %1$s %2$.3f</string>
</resources>
